--- a/overrides/config/GalaxySpace/dimensions.conf
+++ b/overrides/config/GalaxySpace/dimensions.conf
@@ -1,8 +1,28 @@
 # Configuration file
 
+achievements {
+}
+
+
+client {
+}
+
+
+compatibility {
+}
+
+
+controls {
+}
+
+
 development {
     # Dimension ID for Test planet (only for debug)
     I:dimensionIDTest=-1234
+}
+
+
+difficulty {
 }
 
 
@@ -30,8 +50,6 @@ dimensions {
 
     # Dimension ID for Io (Jupiter moon)
     I:dimensionIDIo=-1014
-
-    # Dimension ID for Jupiter (Only for Space Station)
     I:dimensionIDJupiter=-1026
 
     # Dimension ID for Kuiper Belt
@@ -78,6 +96,10 @@ dimensions {
 
     # WorldProvider ID for Static Venus Space Stations (advanced: do not change unless you have conflicts)
     I:idDimensionVenusOrbitStatic=-1129
+}
+
+
+entities {
 }
 
 
@@ -141,9 +163,19 @@ general {
 
     # Enable/Disable Venus Space Station
     B:enableVenusSpaceStation=true
-
-    # Enable/Disable Mars Space Station
     B:enableMarsSpaceStation=true
+}
+
+
+schematic {
+}
+
+
+server {
+}
+
+
+worldgen {
 }
 
 
