--- a/overrides/config/GalaxySpace/energy.conf
+++ b/overrides/config/GalaxySpace/energy.conf
@@ -1,9 +1,34 @@
 # Configuration file
 
-general {
-    # Gaseous Generator power factor
-    D:coefficientGasGenerator=1.0
+achievements {
+}
 
+
+client {
+}
+
+
+compatibility {
+}
+
+
+controls {
+}
+
+
+difficulty {
+}
+
+
+dimensions {
+}
+
+
+entities {
+}
+
+
+general {
     # Fuel Generator power factor
     D:coefficientFuelGenerator=1.0
 
@@ -21,6 +46,19 @@ general {
 
     # Rocket Assembly craft speed factor
     D:coefficientSpeedRocketAssembly=1.0
+    D:coefficientGasGenerator=1.0
+}
+
+
+schematic {
+}
+
+
+server {
+}
+
+
+worldgen {
 }
 
 
