--- a/overrides/config/GalaxySpace/core.conf
+++ b/overrides/config/GalaxySpace/core.conf
@@ -3,6 +3,8 @@
 client {
     # Enable/Disable Methane Particles.
     B:enableMethaneParticle=true
+
+    # Enable/Disable modern GUI elements.
     B:enableModernGUI=true
 
     # Enable/Disable new Main Menu.
@@ -77,6 +79,8 @@ hardmode {
 
     # Enable/Disable advanced thermal system on celestial bodies.
     B:enableAdvancedThermalSystem=true
+
+    # Enable/Disable explosion gas (Nature gas, etc) from fire, torch, magma.
     B:enableGasExplosion=true
 
     # Enable/Disable the need oxygen for plants and foods.
@@ -87,6 +91,8 @@ hardmode {
 
     # Enable/Disable solar radiation system.
     B:enableRadiationSystem=true
+
+    # Enable/Disable solar radiation on Moon.
     B:enableSolarRadiationOnMoon=true
 
     # Enable/Disable zero gravity (like Kuiper Belt) on Astreroids.
